# brepmatching

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  OSS_LICENSES.txt  README.md  build.bat  environment.yml  publish.bat  pyproject.toml  requirements.txt  setup.py  setup_install.py  train.py  更新メモ.txt
.github/workflows/: python-poetry-publish.yml
automate/: CMakeLists.txt
automate/automate/: conversions.py  sbgcn.py
brepmatching/: __init__.py  _match_parts_butlers_bite.py  data.py  matching_model.py  rendering.py
brepmatching/pyfemtet_scripts/: dataset_creator_to_predict.py  epoch=358-val_loss=0.005953.ckpt  main.py  predict.py  replace_model_considering_their_matching.py
coincidence_matching/: bindings.cpp
data/OriginalBreps/with_tol/: my_model.x_t  my_model_var.x_t
data/create_data_for_prediction/: create_coincidence_matching.py
debug_by_pyfemtet/version_0/: events.out.tfevents.1722561560.m6cow.43328.0  hparams.yaml
debug_by_pyfemtet/version_0/checkpoints/: epoch=4-step=25.ckpt  epoch=4-val_loss=0.163663.ckpt  epoch=5-val_loss=0.162655.ckpt  epoch=6-val_loss=0.163092.ckpt  epoch=8-val_loss=0.162916.ckpt  last.ckpt
debug_by_pyfemtet/version_2/: events.out.tfevents.1722562608.m6cow.40588.0  events.out.tfevents.1722563538.m6cow.40588.1  hparams.yaml  result memo.txt
debug_by_pyfemtet/version_3/: events.out.tfevents.1722566482.m6cow.15276.0  events.out.tfevents.1722567429.m6cow.15276.1  hparams.yaml  result memo.txt
debug_by_pyfemtet/version_3/checkpoints/: last.ckpt  (+5 more)
pyfemtet_debug/version_0/: events.out.tfevents.1722561012.m6cow.26324.0  hparams.yaml
scripts/: init_new_model.py  matchGenHelpFunctions.py
src/: set_attributes.pyi
src/automate/: CMakeLists.txt
src/brepmatching/: __init__.py  matching_model.py  models.py  utils.py  visualization.py
src/coincidence_matching/: CMakeLists.txt
src/set_attributes/: CMakeLists.txt  bindings.cpp
tests/: predict_test_with_femtet.py
tests/files/: Cube.x_t  Part1.x_t  Part1_tmp.x_t  RoundedCube_tmp.x_t  model_import_and_parameter.femprj  model_orig.x_t  model_var_tmp.x_t
(+39 files in other folders)
