[build-system]
requires = [
    "setuptools>=75.2.0,<76.0.0",
    "scikit-build>=0.17.6",
    "wheel",
    "cmake>=3.30.5,<4.0.0",
    "pybind11[global]>=2.13.6,<3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "brepmatching"
version = "0.1.8"
description = "Learning to match BRep Topology"
authors = [{name = "Kazuma NAITO", email = "kazuma.naito@murata.com"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.8"  # 必要に応じて調整

# この段階ではdependenciesなどは省略（ビルドのみ確認するため）

[tool.setuptools]
include-package-data = true