[build-system]
requires = [
    "setuptools>=75.2.0,<76.0.0",
    "wheel",
    "cmake>=3.30.5,<4.0.0",
    "pybind11[global]>=2.13.6,<3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "brepmatching"
version = "0.1.8"
description = "Topology matching using brepmatching and Femtet."
authors = [{ name = "pyfemtet", email = "148934231+pyfemtet@users.noreply.github.com" }]
license = {file = "LICENSE.txt"}
readme = "README.md"
# requires-python = ">=3.8"  # 必要に応じて調整
dependencies = [
    "torch>=2.5.1,<2.6.0",
    "torch-geometric>=2.6.1,<2.7.0",
    "pytorch-lightning>=2.4.0,<2.5.0",
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "scipy>=1.14.1,<2.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "tqdm>=4.66.5,<5.0.0",
    "dotmap>=1.3.30,<2.0.0",
    "xxhash>=3.5.0,<4.0.0",
    "parse>=1.20.2,<2.0.0",
    "femtetutils>=1.0.0",
    "pywin32>=306",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
brepmatching = [
    "pyfemtet_scripts/data/dataset_to_predict/dataset/data/VariationData/*.csv",
    "pyfemtet_scripts/*.ckpt",
]
automate = [
    "cpp/*.cpp",
    "cpp/*.h",
    "include/Eigen/**",
    "CMakeLists.txt",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = [
    "brepmatching*",
    "automate*",
    "coincidence_matching*",
    "set_attributes*",
]